# noctcom

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .trivyignore  Dockerfile.landing  HALL_OF_FAME.md  LICENSE  NOCTCOM.md  NOCTCOM_vs_NEXTCLOUD_INTERNAL.md  PHASES.md  README.md  SECURITY.md  SELFHOST.md  cspell.json  docker-compose.lan.yml  docker-compose.override.yml  docker-compose.yml  install.sh  osv-scanner.toml  posts_.txt  render.yaml  update.sh
.github/: dependabot.yml
.github/workflows/: agent-ci.yml  agent-release.yml  build.yml  ci.yml  security.yml
agent/: Cargo.toml  README.md  build.rs  noctcom-connector.exe.manifest
agent/src/: config.rs  format.rs  i18n.rs  identity.rs  main.rs  protocol.rs  rtc.rs  update.rs  util.rs  volume.rs
agent/src/disk/: linux.rs  mod.rs  windows.rs
backend/: Dockerfile  package-lock.json  package.json  tsconfig.json  vitest.config.ts
backend/scripts/: apply-schema.ts  fix-quota.ts  migrate-agent-unlock.ts  migrate-billing.ts  migrate-contacts.ts  test-b2.ts  (+7 more)
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: CRYPTO_SPEC.md  INSTALL_PROXMOX.md  RESTORE.md  THREAT_MODEL.md
frontend/: .dockerignore  Dockerfile  instrumentation-client.ts  instrumentation.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  sentry.server.config.ts  tsconfig.tsbuildinfo
marketing/: demo-seguridad-zk.html  presentacion-noctcom.html
proxmox/: README.md  add-disk.sh  noctcom-lxc.sh
scripts/: backup.sh  init-db-render.sql  init-db.sql  restore.sh  selfhost-db-sync.sh  selfhost-lan-https.sh  verify-release.sh
self-host/: Almacenamiento.html  Archivos.html  Desbloqueo.html  Seguridad.html  Visor.html
(+213 files in other folders)
