[package]
name = "noctcom-desktop"
version = "0.1.0"
edition = "2021"
description = "Noctcom — escritorio (conecta a tu instancia cloud o self-host)"
license = "AGPL-3.0"

[lib]
name = "noctcom_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rustls + aceptar certs autofirmados: el self-host en LAN sirve HTTPS por IP con
# un cert que no valida; el ping debe poder marcarlo "en línea" igualmente.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
